tests/errors/papercut-cell-and-group-conflict.expect
---CODE---
1
---STDERR---
Error: 
5 |    incr = prim std_add(32);
  |    ^^^^ Name already bound by group
